--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
-    "@storybook/addon-docs": "^5.2.4",
-    "@storybook/html": "^5.2.4",
-    "@storybook/react": "^5.2.4",
-    "babel-loader": "^8.0.6"
+    "@storybook/html": "^5.2.5",
+    "@storybook/react": "^5.2.5",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0"
   }
 }
