--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "start-storybook -p 6006",
     "build:storybook": "build-storybook",
-    "build:styles": ""
+    "build:styles": "node-sass styles/index.scss -o=storybook-static/ --output-style=compressed --source-comments=false",
+    "build": "npm run build:storybook && npm run build:styles"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +24,7 @@
     "@storybook/react": "^5.2.5",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0"
   }
