--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "dev": "start-storybook -p 6006",
     "build:storybook": "build-storybook --output-dir=docs",
     "build:styles": "node-sass styles/index.scss -o=docs/ --output-style=compressed --source-comments=false",
-    "build": "npm run build:storybook && npm run build:styles"
+    "build": "npm run build:storybook && npm run build:styles",
+    "publish": "npm run build && git commit -m 'chore(docs): Publish assets'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "pre-commit": [
-    "build"
-  ],
   "dependencies": {
     "bootstrap": "^4.3.1"
   },
@@ -29,7 +27,6 @@
     "css-loader": "^3.2.0",
     "html-loader": "^0.5.5",
     "node-sass": "^4.13.0",
-    "pre-commit": "^1.2.2",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0"
   }
