--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:storybook": "build-storybook --output-dir=docs",
     "build:styles": "node-sass styles/index.scss -o=docs/ --output-style=compressed --source-comments=false",
     "build": "npm run build:storybook && npm run build:styles",
-    "publish": "npm run build && git commit -m 'chore(docs): Publish assets'"
+    "publish": "npm run build && git add . && git commit -m 'chore(docs): Publish assets' && git push"
   },
   "keywords": [],
   "author": "",
