--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:storybook": "build-storybook --output-dir=docs -s=.storybook/public",
     "build:styles": "node-sass styles/index.scss -o=docs/ --output-style=compressed --source-comments=false -s=.storybook/public",
     "build": "npm run build:storybook && npm run build:styles",
-    "publish": "npm run build && git add . && git commit -m 'chore(docs): Publish assets' && git push"
+    "upgrade-dependencies": "ncu -u"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "@babel/core": "^7.6.4",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@storybook/addon-docs": "^5.2.5",
+    "@storybook/addon-storysource": "^5.2.5",
     "@storybook/html": "^5.2.5",
     "@storybook/react": "^5.2.5",
     "babel-loader": "^8.0.6",
@@ -24,6 +25,7 @@
     "css-loader": "^3.2.0",
     "html-loader": "^0.5.5",
     "node-sass": "^4.13.0",
+    "npm-check-updates": "^3.2.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0"
   }
