--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:storybook": "build-storybook --output-dir=docs -s=.storybook/public",
     "build:styles": "node-sass styles/index.scss -o=docs/ --output-style=compressed --source-comments=false -s=.storybook/public",
     "build": "npm run build:storybook && npm run build:styles",
+    "publish": "npm run build && git add . && git commit -m 'chore(docs): Publish assets' && git push",
     "upgrade-dependencies": "ncu -u"
   },
   "keywords": [],
